--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -37,7 +37,7 @@ plugins:
 
 domain: minfloof.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://minfloof.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: /docs     # place folder name if the site is served in a subfolder
+#baseurl: /docs     # place folder name if the site is served in a subfolder
 
 
 # Exclude from processing.
